# apps/api/src/common/constants.ts
@@ -1,0 +1,3 @@
+export const GLOBAL_LINK_LIMIT = 100;
+export const GLOBAL_KEY_LIMIT = 10;
+export const RETENTION_MS = 94_608_000_000; // 3 * 365 * 24 * 60 * 60 * 1000
